--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "2.5.8",
     "jqtpl": ">= 0.0.1",
     "jake": ">= 0.2.32",
-    "minimatch": ">= 0.2.4"
+    "minimatch": ">= 0.2.4",
+    "mongoose": ">= 2.5.13"
   }
 }
