--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jqtpl": ">= 0.0.1",
     "jake": ">= 0.2.32",
     "minimatch": ">= 0.2.4",
-    "mongoose": ">= 2.5.13"
+    "mongoose": ">= 2.5.13",
+    "connect-mongo": ">= 0.1.7"
   }
 }
