Add jQuery as a depend.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jake": ">= 0.2.32",
     "minimatch": ">= 0.2.4",
     "mongoose": ">= 2.5.13",
-    "connect-mongo": ">= 0.1.7"
+    "connect-mongo": ">= 0.1.7",
+    "jQuery": ">= 1.6.0"
   }
 }
