--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mongoose": ">= 2.5.13",
     "connect-mongo": ">= 0.1.7",
     "jQuery": ">= 1.6.0",
-    "jsdom": ">= 0.2.13"
+    "jsdom": ">= 0.2.13",
+    "xmlhttprequest": ">= 1.3.0"
   }
 }
